--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
       { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
+      { "src": "/api/(.*)", "dest": "/indexUsuario.js" },
       { "src": "/(.*)", "dest": "/index.js" }
     ]
   }
