--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "cloudinary": "^1.41.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
+    "querystring": "^0.2.1",
+    "react-leaflet": "^4.2.1",
     "streamifier": "^0.1.1"
   }
 }
